src/snapshots/venial__parse__tests__get_unit_struct.snap
---
source: src/parse.rs
assertion_line: 138
expression: struct_type
---
Struct(
    Struct {
        name: "Hello",
        contents: Unit,
    },
)
