src/snapshots/venial__parse__tests__parse_normal_struct.snap
---
source: src/parse.rs
assertion_line: 159
expression: struct_type
---
Struct(
    Struct {
        name: "Hello",
        contents: Named(
            [
                NamedField {
                    name: "a",
                    ty: TyExpr {
                        tokens: [
                            Ident {
                                sym: A,
                            },
                        ],
                    },
                },
                NamedField {
                    name: "b",
                    ty: TyExpr {
                        tokens: [
                            Ident {
                                sym: B,
                            },
                        ],
                    },
                },
            ],
        ),
    },
)
