src/snapshots/venial__parse__tests__parse_tuple_struct.snap
---
source: src/parse.rs
assertion_line: 147
expression: struct_type
---
Struct(
    Struct {
        name: "Hello",
        contents: Tuple(
            [
                TupleField {
                    ty: TyExpr {
                        tokens: [
                            Ident {
                                sym: A,
                            },
                        ],
                    },
                },
                TupleField {
                    ty: TyExpr {
                        tokens: [
                            Ident {
                                sym: B,
                            },
                        ],
                    },
                },
            ],
        ),
    },
)
